# py.rust

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  rust_wrapper.py
rust_library/src/: lib.rs
tests/: test_rust.py
